tdf#94456 RTF import: fix list vs paragraph style interaction wrt para indents

In case we set the paragraph left/right/first margin just to mimic the
list vs paragraph style interaction as Word wants it, never overwrite
properties, as they are always meant to be just callbacks in case there
is no real hard formatting.

Change-Id: Ibdb2834c693d43cf4114453e42628e8f64c0a856